FIX SONAR CRITICAL ISSUES